--- a/atividade-6/css/style.css
+++ b/atividade-6/css/style.css
@@ -7,7 +7,6 @@ body {
 }
 
 .containerGeral {
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255), rgb(122, 122, 122));
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,28 +20,87 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
-    width: 50%;
-    border: 3px solid black;
+    height: auto;
+    width: 99%;
     border-radius: 40px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
+.btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 10%;
+    margin: 15px 15px;
+}
+
+/* Etapas */
+.objetivoP {
+    height: 100%;
+    width: 100%;
+    display: none;
+}
+
+
 .formacaoAcademica {
+    width: 100%;
     display: none;
     align-items: center;
 }
 
-.objetivoP {
+.experienciaProfissional {
+    width: 100%;
+    display: none;
+    align-items: center;
+}
+
+#addFormAcad, #addExpProf {
+    background-color: rgb(25, 77, 145);
+    color: white;
+    border-radius: 30px;
+    border: none;
+    margin-top: 5px;
+}
+
+#listaFormacao, #listaExpProf {
+    margin: 10px auto;
+    padding: 10px 20px;
+    width: 90%;
+    height: 30%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 40px;
+    text-align: center;
     display: none;
 }
 
-#form,
-.divForm {
+#listaFormacao > div, #listaExpProf > div {
+    display: inline-block;
+    width: 25%;
+    height: auto;
+    max-width: 25vw;
+    margin: 0px 2%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+
+/* Config geral */
+form {
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     width: 40%;
     justify-content: space-around;
+}
+
+#corTitulo {
+    color: rgb(0, 0, 0);
 }
 
 h2,
@@ -56,7 +114,34 @@ input {
     border: none;
     background-color: #ffffff;
     color: rgb(0, 0, 0);
-    width: auto;
+    border-radius: 20px;
+    width: 100%;
+    min-width: 150px;
+}
+
+textarea {
+    width: 100%;
+    height: 100%;
+    resize: none;
+    background-color: white;
+    color: rgb(0, 0, 0);
+    border-bottom: solid 1px rgb(0, 0, 0);
+    border: none;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
+    margin: 0;
+    overflow: auto;
+    outline: none;
+    border-radius: 20px;
+}
+
+select {
+    border: none;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border-radius: 20px;
+    width: 100%;
     min-width: 150px;
 }
 
@@ -70,28 +155,24 @@ span {
     padding: .5%;
     color: rgb(0, 0, 0);
     font-weight: bold;
-    border-top: none;
-    border-left: none;
-    border-right: none;
     border-bottom: 1px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     border-bottom-style: solid;
     border-color: rgb(0, 0, 0);
+    border-radius: 20px;
 }
 
-#objetivo {
-    width: 100%;
-}
 
-#corTitulo {
-    color: rgb(0, 0, 0);
-}
 
+
+/* Botões */
 #btnNext {
-    margin-top: 30px;
+    margin-left: auto;
     background-color: rgb(25, 77, 145);
     color: white;
     border-radius: 30px;
     border: none;
+    width: 15%;
 }
 
 #btnBack {
@@ -100,22 +181,16 @@ span {
     color: white;
     border-radius: 30px;
     border: none;
-    margin-top: 5px;
+    width: 15%;
 }
 
 #btnSubmit {
+    margin-left: auto;
     display: none;
     background-color: rgb(25, 77, 145);
     color: white;
     border-radius: 30px;
     border: none;
     margin-top: 5px;
-}
-
-#addFormAcad {
-    background-color: rgb(25, 77, 145);
-    color: white;
-    border-radius: 30px;
-    border: none;
-    margin-top: 5px;
+    max-width: 30%;
 }
